--- a/main.ipynb
+++ b/main.ipynb
@@ -6,10 +6,215 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms"
+    "import os\n",
+    "import random\n",
+    "import math\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "from dataloader import get_dataloader\n",
+    "from resnet import ResNet\n",
+    "\n",
+    "# Ensure deterministic behavior\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33meddiezhuang\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "\n",
+    "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.6"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/Users/eddiezhuang/Code/resnet/wandb/run-20240425_202956-1nk2qspc</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc' target=\"_blank\">crimson-microwave-2</a></strong> to <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wandb.init(\n",
+    "    project=\"resnet\",\n",
+    "    config={\n",
+    "        \"batch_size\": 128,\n",
+    "        \"learning_rate\": 0.1,\n",
+    "        \"num_epochs\": 7,\n",
+    "        \"weight_decay\": 0.0001,\n",
+    "        \"momentum\": 0.9,\n",
+    "        \"n\": 3,\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "config = wandb.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_model(model, val_dataloader, loss_func):\n",
+    "    model.evail()\n",
+    "    val_loss = 0\n",
+    "    with torch.inference_mode():\n",
+    "        correct = 0\n",
+    "        for i, (images, labels) in enumerate(val_dataloader):\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "            outputs = model(images)\n",
+    "            val_loss += loss_func(outputs, labels) * labels.size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader, val_dataloader = get_dataloader(True, config.batch_size)\n",
+    "model = ResNet(config.n).to(device)\n",
+    "loss_func = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=config.learning_rate, weight_decay=config.weight_decay, momentum=config.momentum)\n",
+    "epochs = config.num_iterations // len(train_dataloader)\n",
+    "n_steps_per_epoch = math.ceil(len(train_dataloader.dataset) / config.batch_size)\n",
+    "\n",
+    "for epoch in range(config.epochs):\n",
+    "    model.train()\n",
+    "\n",
+    "    for step, (images, labels) in enumerate(train_dataloader):\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "        outputs = model(images)\n",
+    "        train_loss = loss_func(outputs, labels)\n",
+    "        optimizer.zero_grad()\n",
+    "        train_loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        accuracy = (outputs.argmax(1) == labels).float().mean()\n",
+    "        metrics = {\n",
+    "            \"train/train_loss\": train_loss,\n",
+    "            \"train/epoch\": (step + 1 + (n_steps_per_epoch * epoch)) / n_steps_per_epoch,\n",
+    "            \"train/error\": 1 - accuracy,\n",
+    "        }\n",
+    "        wandb.log(metrics)\n",
+    "\n",
+    "    val_loss, accuracy = validate_model(model, val_dataloader, loss_func)\n"
    ]
   }
  ],
