--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -31,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -66,28 +67,6 @@
     },
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import wandb\n",
-    "\n",
-    "wandb.login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
       "text/html": [
        "Tracking run with wandb version 0.16.6"
       ],
@@ -101,7 +80,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/eddiezhuang/Code/resnet/wandb/run-20240425_202956-1nk2qspc</code>"
+       "Run data is saved locally in <code>/Users/eddiezhuang/Code/resnet/wandb/run-20240426_101151-ijk8fbvr</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -113,7 +92,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc' target=\"_blank\">crimson-microwave-2</a></strong> to <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr' target=\"_blank\">giddy-elevator-9</a></strong> to <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -137,7 +116,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet/runs/1nk2qspc</a>"
+       " View run at <a href='https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -148,12 +127,16 @@
     }
    ],
    "source": [
+    "import wandb\n",
+    "\n",
+    "wandb.login()\n",
+    "\n",
     "wandb.init(\n",
     "    project=\"resnet\",\n",
     "    config={\n",
     "        \"batch_size\": 128,\n",
     "        \"learning_rate\": 0.1,\n",
-    "        \"num_epochs\": 7,\n",
+    "        \"iterations\": 64000,\n",
     "        \"weight_decay\": 0.0001,\n",
     "        \"momentum\": 0.9,\n",
     "        \"n\": 3,\n",
@@ -165,36 +148,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate_model(model, val_dataloader, loss_func):\n",
-    "    model.evail()\n",
-    "    val_loss = 0\n",
-    "    with torch.inference_mode():\n",
-    "        correct = 0\n",
-    "        for i, (images, labels) in enumerate(val_dataloader):\n",
-    "            images, labels = images.to(device), labels.to(device)\n",
-    "\n",
-    "            outputs = model(images)\n",
-    "            val_loss += loss_func(outputs, labels) * labels.size(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataloader, val_dataloader = get_dataloader(True, config.batch_size)\n",
     "model = ResNet(config.n).to(device)\n",
     "loss_func = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=config.learning_rate, weight_decay=config.weight_decay, momentum=config.momentum)\n",
-    "epochs = config.num_iterations // len(train_dataloader)\n",
-    "n_steps_per_epoch = math.ceil(len(train_dataloader.dataset) / config.batch_size)\n",
+    "optimizer = torch.optim.SGD(\n",
+    "    model.parameters(),\n",
+    "    lr=config.learning_rate,\n",
+    "    weight_decay=config.weight_decay,\n",
+    "    momentum=config.momentum,\n",
+    ")\n",
     "\n",
-    "for epoch in range(config.epochs):\n",
+    "iter = 0\n",
+    "while iter < config.iterations:\n",
     "    model.train()\n",
     "\n",
     "    for step, (images, labels) in enumerate(train_dataloader):\n",
@@ -208,13 +185,14 @@
     "\n",
     "        accuracy = (outputs.argmax(1) == labels).float().mean()\n",
     "        metrics = {\n",
-    "            \"train/train_loss\": train_loss,\n",
-    "            \"train/epoch\": (step + 1 + (n_steps_per_epoch * epoch)) / n_steps_per_epoch,\n",
     "            \"train/error\": 1 - accuracy,\n",
+    "            \"train/train_loss\": train_loss,\n",
     "        }\n",
     "        wandb.log(metrics)\n",
     "\n",
-    "    val_loss, accuracy = validate_model(model, val_dataloader, loss_func)\n"
+    "        iter += 1\n",
+    "        if iter >= config.iterations:\n",
+    "            break"
    ]
   }
  ],
