Resolve linting suggestions

--- a/main.ipynb
+++ b/main.ipynb
@@ -129,8 +129,15 @@
    "source": [
     "import wandb\n",
     "\n",
-    "wandb.login()\n",
-    "\n",
+    "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wandb.init(\n",
     "    project=\"resnet\",\n",
     "    config={\n",
