--- a/main.ipynb
+++ b/main.ipynb
@@ -2,27 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
     "import random\n",
-    "import math\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
     "from torch import nn\n",
-    "from tqdm.auto import tqdm\n",
     "\n",
     "from dataloader import get_dataloader\n",
     "from resnet import ResNet\n",
@@ -40,92 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33meddiezhuang\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.6"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/eddiezhuang/Code/resnet/wandb/run-20240426_101151-ijk8fbvr</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr' target=\"_blank\">giddy-elevator-9</a></strong> to <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/eddiezhuang/resnet' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr' target=\"_blank\">https://wandb.ai/eddiezhuang/resnet/runs/ijk8fbvr</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "config = (\n",
+    "    {\n",
+    "        \"batch_size\": 128,\n",
+    "        \"learning_rate\": 0.1,\n",
+    "        \"iterations\": 64000,\n",
+    "        \"weight_decay\": 0.0001,\n",
+    "        \"momentum\": 0.9,\n",
+    "        \"n\": 3,\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
@@ -138,68 +61,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wandb.init(\n",
-    "    project=\"resnet\",\n",
-    "    config={\n",
-    "        \"batch_size\": 128,\n",
-    "        \"learning_rate\": 0.1,\n",
-    "        \"iterations\": 64000,\n",
-    "        \"weight_decay\": 0.0001,\n",
-    "        \"momentum\": 0.9,\n",
-    "        \"n\": 3,\n",
-    "    },\n",
-    ")\n",
+    "def make(config):\n",
+    "    train_dataloader, val_dataloader = get_dataloader(True, config.batch_size)\n",
+    "    test_dataloader = get_dataloader(False, config.batch_size)\n",
     "\n",
-    "config = wandb.config"
+    "    model = ResNet(config.n).to(device)\n",
+    "\n",
+    "    loss_func = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.SGD(\n",
+    "        model.parameters(),\n",
+    "        lr=config.learning_rate,\n",
+    "        weight_decay=config.weight_decay,\n",
+    "        momentum=config.momentum,\n",
+    "    )\n",
+    "\n",
+    "    return (\n",
+    "        model,\n",
+    "        train_dataloader,\n",
+    "        val_dataloader,\n",
+    "        test_dataloader,\n",
+    "        loss_func,\n",
+    "        optimizer,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_dataloader, val_dataloader = get_dataloader(True, config.batch_size)\n",
-    "model = ResNet(config.n).to(device)\n",
-    "loss_func = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(\n",
-    "    model.parameters(),\n",
-    "    lr=config.learning_rate,\n",
-    "    weight_decay=config.weight_decay,\n",
-    "    momentum=config.momentum,\n",
-    ")\n",
+    "def validate(model, loader, loss_func):\n",
+    "    model.eval()\n",
+    "    val_loss = 0.0\n",
+    "    with torch.inference_mode():\n",
+    "        correct = 0\n",
+    "        for images, labels in enumerate(loader):\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
     "\n",
-    "iter = 0\n",
-    "while iter < config.iterations:\n",
-    "    model.train()\n",
+    "            # Forward pass\n",
+    "            outputs = model(images)\n",
+    "            val_loss += loss_func(outputs, labels) * labels.size(0)\n",
     "\n",
-    "    for step, (images, labels) in enumerate(train_dataloader):\n",
-    "        images, labels = images.to(device), labels.to(device)\n",
+    "            _, predicted_indices = torch.max(outputs.data, 1)\n",
+    "            correct += (predicted_indices == labels).sum().item()\n",
     "\n",
-    "        outputs = model(images)\n",
-    "        train_loss = loss_func(outputs, labels)\n",
-    "        optimizer.zero_grad()\n",
-    "        train_loss.backward()\n",
-    "        optimizer.step()\n",
+    "    val_loss /= len(loader.dataset)\n",
+    "    val_accuracy = correct / len(loader.dataset)\n",
     "\n",
-    "        accuracy = (outputs.argmax(1) == labels).float().mean()\n",
-    "        metrics = {\n",
-    "            \"train/error\": 1 - accuracy,\n",
-    "            \"train/train_loss\": train_loss,\n",
-    "        }\n",
-    "        wandb.log(metrics)\n",
+    "    return val_loss, val_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader, val_loader, loss_func, optimizer, config):\n",
+    "    # Tell wandb to watch what the model gets up to: gradients, weights, and more!\n",
+    "    wandb.watch(model, loss_func, log=\"all\", log_freq=10)\n",
     "\n",
-    "        iter += 1\n",
-    "        if iter >= config.iterations:\n",
-    "            break"
+    "    iter = 0\n",
+    "    while iter < config.iterations:\n",
+    "        model.train()\n",
+    "\n",
+    "        # Train for one epoch\n",
+    "        for images, labels in train_loader:\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "            outputs = model(images)\n",
+    "            train_loss = loss_func(outputs, labels)\n",
+    "            optimizer.zero_grad()\n",
+    "            train_loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            # Report metrics every 25th batch\n",
+    "            if ((iter + 1) % 25) == 0:\n",
+    "                accuracy = (outputs.argmax(1) == labels).float().mean()\n",
+    "                wandb.log(\n",
+    "                    {\n",
+    "                        \"train/error\": 1 - accuracy,\n",
+    "                        \"train/train_loss\": train_loss,\n",
+    "                    }\n",
+    "                )\n",
+    "\n",
+    "            iter += 1\n",
+    "            if iter >= config.iterations:\n",
+    "                break\n",
+    "\n",
+    "        # Validate\n",
+    "        val_loss, val_accuracy = validate(model, val_loader, loss_func)\n",
+    "        wandb.log(\n",
+    "            {\n",
+    "                \"validation/error\": 1 - val_accuracy,\n",
+    "                \"validation/train_loss\": val_loss,\n",
+    "            }\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_pipeline(hyperparameters):\n",
+    "\n",
+    "    # tell wandb to get started\n",
+    "    with wandb.init(project=\"resnet\", config=hyperparameters):\n",
+    "        # access all HPs through wandb.config, so logging matches execution!\n",
+    "        config = wandb.config\n",
+    "\n",
+    "        # make the model, data, and optimization problem\n",
+    "        model, train_loader, val_loader, test_loader, loss_func, optimizer = make(\n",
+    "            config\n",
+    "        )\n",
+    "\n",
+    "        # and use them to train the model\n",
+    "        train(model, train_loader, loss_func, optimizer, config)\n",
+    "\n",
+    "        # and test its final performance\n",
+    "        test(model, test_loader)\n",
+    "\n",
+    "    return model"
    ]
   }
  ],
