--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +24,6 @@
     "\n",
     "# Device configuration\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = (\n",
-    "    {\n",
-    "        \"batch_size\": 128,\n",
-    "        \"learning_rate\": 0.1,\n",
-    "        \"iterations\": 64000,\n",
-    "        \"weight_decay\": 0.0001,\n",
-    "        \"momentum\": 0.9,\n",
-    "        \"n\": 3,\n",
-    "    },\n",
-    ")"
    ]
   },
   {
@@ -87,29 +69,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate(model, loader, loss_func):\n",
+    "def evaluate(model, loader, loss_func):\n",
     "    model.eval()\n",
-    "    val_loss = 0.0\n",
+    "    loss = 0.0\n",
     "    with torch.inference_mode():\n",
     "        correct = 0\n",
-    "        for images, labels in enumerate(loader):\n",
+    "        for images, labels in loader:\n",
     "            images, labels = images.to(device), labels.to(device)\n",
     "\n",
     "            # Forward pass\n",
     "            outputs = model(images)\n",
-    "            val_loss += loss_func(outputs, labels) * labels.size(0)\n",
+    "            loss += loss_func(outputs, labels) * labels.size(0)\n",
     "\n",
     "            _, predicted_indices = torch.max(outputs.data, 1)\n",
     "            correct += (predicted_indices == labels).sum().item()\n",
     "\n",
-    "    val_loss /= len(loader.dataset)\n",
-    "    val_accuracy = correct / len(loader.dataset)\n",
+    "    loss /= len(loader.dataset)\n",
+    "    accuracy = correct / len(loader.dataset)\n",
     "\n",
-    "    return val_loss, val_accuracy"
+    "    return loss, accuracy"
    ]
   },
   {
@@ -151,7 +133,7 @@
     "                break\n",
     "\n",
     "        # Validate\n",
-    "        val_loss, val_accuracy = validate(model, val_loader, loss_func)\n",
+    "        val_loss, val_accuracy = evaluate(model, val_loader, loss_func)\n",
     "        wandb.log(\n",
     "            {\n",
     "                \"validation/error\": 1 - val_accuracy,\n",
@@ -179,12 +161,39 @@
     "        )\n",
     "\n",
     "        # and use them to train the model\n",
-    "        train(model, train_loader, loss_func, optimizer, config)\n",
+    "        train(model, train_loader, val_loader, loss_func, optimizer, config)\n",
     "\n",
     "        # and test its final performance\n",
-    "        test(model, test_loader)\n",
+    "        # Validate\n",
+    "        _, test_accuracy = evaluate(model, test_loader, loss_func)\n",
+    "        wandb.log(\n",
+    "            {\n",
+    "                \"test/error\": 1 - test_accuracy,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in [3, 5, 7, 9]:\n",
+    "    config = dict(\n",
+    "        {\n",
+    "            \"n\": n,\n",
+    "            \"batch_size\": 128,\n",
+    "            \"learning_rate\": 0.1,\n",
+    "            \"iterations\": 1000,\n",
+    "            \"weight_decay\": 0.0001,\n",
+    "            \"momentum\": 0.9,\n",
+    "        },\n",
+    "    )\n",
+    "\n",
+    "    model_pipeline(config)"
    ]
   }
  ],
