--- a/main.ipynb
+++ b/main.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "def evaluate(model, loader, loss_func):\n",
     "    model.eval()\n",
-    "    loss = 0.0\n",
+    "    loss_sum = 0.0\n",
     "    with torch.inference_mode():\n",
     "        correct = 0\n",
     "        for images, labels in loader:\n",
@@ -83,12 +83,12 @@
     "\n",
     "            # Forward pass\n",
     "            outputs = model(images)\n",
-    "            loss += loss_func(outputs, labels) * labels.size(0)\n",
+    "            loss_sum += loss_func(outputs, labels) * labels.size(0)\n",
     "\n",
     "            _, predicted_indices = torch.max(outputs.data, 1)\n",
     "            correct += (predicted_indices == labels).sum().item()\n",
     "\n",
-    "    loss /= len(loader.dataset)\n",
+    "    loss = loss_sum / len(loader.dataset)\n",
     "    accuracy = correct / len(loader.dataset)\n",
     "\n",
     "    return loss, accuracy"
@@ -187,7 +187,7 @@
     "            \"n\": n,\n",
     "            \"batch_size\": 128,\n",
     "            \"learning_rate\": 0.1,\n",
-    "            \"iterations\": 1000,\n",
+    "            \"iterations\": 5,\n",
     "            \"weight_decay\": 0.0001,\n",
     "            \"momentum\": 0.9,\n",
     "        },\n",
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
