--- a/main.ipynb
+++ b/main.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "import math\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
     "from torch import nn\n",
+    "from torch.optim.lr_scheduler import MultiStepLR\n",
     "\n",
     "from dataloader import get_dataloader\n",
     "from resnet import ResNet\n",
@@ -56,6 +58,7 @@
     "        weight_decay=config.weight_decay,\n",
     "        momentum=config.momentum,\n",
     "    )\n",
+    "    scheduler = MultiStepLR(optimizer, milestones=[91, 137], gamma=0.1)\n",
     "\n",
     "    return (\n",
     "        model,\n",
@@ -64,6 +67,7 @@
     "        test_dataloader,\n",
     "        loss_func,\n",
     "        optimizer,\n",
+    "        scheduler\n",
     "    )"
    ]
   },
@@ -100,16 +104,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, train_loader, val_loader, loss_func, optimizer, config):\n",
+    "def train(model, train_loader, val_loader, loss_func, optimizer, scheduler, config):\n",
     "    # Tell wandb to watch what the model gets up to: gradients, weights, and more!\n",
     "    wandb.watch(model, loss_func, log=\"all\", log_freq=10)\n",
     "\n",
-    "    iter = 0\n",
-    "    while iter < config.iterations:\n",
+    "    n_steps_per_epoch = math.ceil(len(train_loader.dataset) / config.batch_size)\n",
+    "    for epoch in range(config.epochs):\n",
     "        model.train()\n",
     "\n",
     "        # Train for one epoch\n",
-    "        for images, labels in train_loader:\n",
+    "        for step, (images, labels) in enumerate(train_loader):\n",
     "            images, labels = images.to(device), labels.to(device)\n",
     "\n",
     "            outputs = model(images)\n",
@@ -123,6 +127,7 @@
     "                accuracy = (outputs.argmax(1) == labels).float().mean()\n",
     "                wandb.log(\n",
     "                    {\n",
+    "                        \"train/epoch\": (step + 1 + (n_steps_per_epoch * epoch)) / n_steps_per_epoch,\n",
     "                        \"train/error\": 1 - accuracy,\n",
     "                        \"train/train_loss\": train_loss,\n",
     "                    }\n",
@@ -139,7 +144,10 @@
     "                \"validation/error\": 1 - val_accuracy,\n",
     "                \"validation/train_loss\": val_loss,\n",
     "            }\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "        # Adjust learning rate\n",
+    "        scheduler.step()"
    ]
   },
   {
@@ -148,20 +156,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_pipeline(hyperparameters):\n",
+    "def model_pipeline(name, hyperparameters):\n",
     "\n",
     "    # tell wandb to get started\n",
-    "    with wandb.init(project=\"resnet\", config=hyperparameters):\n",
+    "    with wandb.init(project=\"resnet\", config=hyperparameters, name=name):\n",
     "        # access all HPs through wandb.config, so logging matches execution!\n",
     "        config = wandb.config\n",
     "\n",
-    "        # make the model, data, and optimization problem\n",
-    "        model, train_loader, val_loader, test_loader, loss_func, optimizer = make(\n",
+    "        # make the model, data, optimizer, and scheduler\n",
+    "        model, train_loader, val_loader, test_loader, loss_func, optimizer, scheduler = make(\n",
     "            config\n",
     "        )\n",
     "\n",
     "        # and use them to train the model\n",
-    "        train(model, train_loader, val_loader, loss_func, optimizer, config)\n",
+    "        train(model, train_loader, val_loader, loss_func, optimizer, scheduler, config)\n",
     "\n",
     "        # and test its final performance\n",
     "        # Validate\n",
@@ -176,24 +184,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterations: 64000\n",
+    "Batch size: 128\n",
+    "Training samples: 45000\n",
+    "Iterations per epoch: 351\n",
+    "Epochs: 182\n",
+    "\n",
+    "Epoch with 32000 iterations:\n",
+    "91\n",
+    "\n",
+    "Epoch with 48000 iterations:\n",
+    "137"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n in [3, 5, 7, 9]:\n",
+    "runs = [(\"ResNet-20\", 3), (\"ResNet-32\", 5), (\"ResNet-44\", 7), (\"ResNet-56\", 9)]\n",
+    "\n",
+    "for name, n in runs:\n",
     "    config = dict(\n",
     "        {\n",
     "            \"n\": n,\n",
     "            \"batch_size\": 128,\n",
     "            \"learning_rate\": 0.1,\n",
-    "            \"iterations\": 5,\n",
+    "            \"epochs\": 182,\n",
     "            \"weight_decay\": 0.0001,\n",
     "            \"momentum\": 0.9,\n",
     "        },\n",
     "    )\n",
     "\n",
-    "    model_pipeline(config)"
+    "    model_pipeline(name, config)"
    ]
   }
  ],
