Create learning rate schedule

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "            optimizer.step()\n",
     "\n",
     "            # Report metrics every 25th batch\n",
-    "            if ((iter + 1) % 25) == 0:\n",
+    "            if ((step + 1) % 25) == 0:\n",
     "                accuracy = (outputs.argmax(1) == labels).float().mean()\n",
     "                wandb.log(\n",
     "                    {\n",
@@ -132,10 +132,6 @@
     "                        \"train/train_loss\": train_loss,\n",
     "                    }\n",
     "                )\n",
-    "\n",
-    "            iter += 1\n",
-    "            if iter >= config.iterations:\n",
-    "                break\n",
     "\n",
     "        # Validate\n",
     "        val_loss, val_accuracy = evaluate(model, val_loader, loss_func)\n",
@@ -187,17 +183,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterations: 64000\n",
-    "Batch size: 128\n",
-    "Training samples: 45000\n",
-    "Iterations per epoch: 351\n",
-    "Epochs: 182\n",
+    "Paper uses iterations, but PyTorch generally uses epochs\n",
     "\n",
-    "Epoch with 32000 iterations:\n",
-    "91\n",
-    "\n",
-    "Epoch with 48000 iterations:\n",
-    "137"
+    "- Iterations: 64000\n",
+    "- Batch size: 128\n",
+    "- Training samples: 45000\n",
+    "- Iterations per epoch: 351\n",
+    "- Epochs: 182\n",
+    "- Epochs after 32000 iterations: 91\n",
+    "- Epochs after 48000 iterations: 137"
    ]
   },
   {
