Configure training for one run

--- a/main.ipynb
+++ b/main.ipynb
@@ -200,21 +200,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runs = [(\"ResNet-20\", 3), (\"ResNet-32\", 5), (\"ResNet-44\", 7), (\"ResNet-56\", 9)]\n",
+    "config = dict(\n",
+    "    {\n",
+    "        \"n\": 3,\n",
+    "        \"batch_size\": 128,\n",
+    "        \"learning_rate\": 0.1,\n",
+    "        \"epochs\": 182,\n",
+    "        \"weight_decay\": 0.0001,\n",
+    "        \"momentum\": 0.9,\n",
+    "    },\n",
+    ")\n",
     "\n",
-    "for name, n in runs:\n",
-    "    config = dict(\n",
-    "        {\n",
-    "            \"n\": n,\n",
-    "            \"batch_size\": 128,\n",
-    "            \"learning_rate\": 0.1,\n",
-    "            \"epochs\": 182,\n",
-    "            \"weight_decay\": 0.0001,\n",
-    "            \"momentum\": 0.9,\n",
-    "        },\n",
-    "    )\n",
-    "\n",
-    "    model_pipeline(name, config)"
+    "model_pipeline(\"ResNet-20\", config)"
    ]
   }
  ],
